<?xml version="1.0" encoding="utf-8"?>
<resources>
    <item name="profile_app_information_card" type="id" />
    <item name="list_manager_list_card" type="id" />
    <item name="list_manager_create" type="id" />
    <item name="list_manager_name" type="id" />
    <item name="list_manager_colors" type="id" />
    <item name="list_manager_preview" type="id" />
    <item name="list_manager_save" type="id" />
    <item name="sort_option_priority" type="id" />
    <item name="sort_option_newest" type="id" />
    <item name="sort_option_oldest" type="id" />
    <item name="sort_option_alphabetical" type="id" />
    <item name="sort_option_due_date" type="id" />
</resources>

