package com.si13.forgetty

import android.content.Context
import android.graphics.Rect
import android.view.View
import android.view.ViewGroup
import android.widget.TextView
import androidx.recyclerview.widget.RecyclerView
import androidx.test.core.app.ActivityScenario
import androidx.test.core.app.ApplicationProvider
import androidx.test.espresso.Espresso.onView
import androidx.test.espresso.UiController
import androidx.test.espresso.ViewAction
import androidx.test.espresso.ViewAssertion
import androidx.test.espresso.action.CoordinatesProvider
import androidx.test.espresso.action.GeneralSwipeAction
import androidx.test.espresso.action.Press
import androidx.test.espresso.action.Swipe
import androidx.test.espresso.action.ViewActions.click
import androidx.test.espresso.action.ViewActions.pressImeActionButton
import androidx.test.espresso.action.ViewActions.replaceText
import androidx.test.espresso.action.ViewActions.scrollTo
import androidx.test.espresso.action.ViewActions.swipeLeft
import androidx.test.espresso.action.ViewActions.swipeUp
import androidx.test.espresso.assertion.ViewAssertions.doesNotExist
import androidx.test.espresso.assertion.ViewAssertions.matches
import androidx.test.espresso.matcher.RootMatchers.isDialog
import androidx.test.espresso.matcher.ViewMatchers.isDisplayed
import androidx.test.espresso.matcher.ViewMatchers.isRoot
import androidx.test.espresso.matcher.ViewMatchers.isSelected
import androidx.test.espresso.matcher.ViewMatchers.withContentDescription
import androidx.test.espresso.matcher.ViewMatchers.withId
import androidx.test.espresso.matcher.ViewMatchers.withText
import com.google.firebase.auth.FirebaseAuth
import com.google.android.material.card.MaterialCardView
import io.qameta.allure.android.runners.AllureAndroidJUnit4
import kotlinx.coroutines.runBlocking
import org.hamcrest.Matcher
import org.hamcrest.Matchers.allOf
import org.junit.Assert.assertEquals
import org.junit.Assert.assertTrue
import org.junit.After
import org.junit.Before
import org.junit.Test
import org.junit.runner.RunWith

@RunWith(AllureAndroidJUnit4::class)
class HomeTaskTest {

    private val context: Context = ApplicationProvider.getApplicationContext()

    @Before
    fun clearStateBeforeTest() {
        clearState()
    }

    @After
    fun clearStateAfterTest() {
        clearState()
    }

    @Test
    fun addsGuestTask() {
        ActivityScenario.launch(MainActivity::class.java).use {
            continueAsGuest()

            onView(withId(R.id.add_task_fab)).perform(click())
            onView(withId(R.id.task_input)).perform(replaceText("Buy milk"))
            onView(withId(R.id.add_task_button)).perform(click())
            onView(isRoot()).perform(waitFor(500))

            onView(withText("Buy milk")).check(matches(isDisplayed()))
            onView(withId(R.id.task_character_counter)).check(doesNotExist())
        }
    }

    @Test
    fun rapidAddCallbacksCreateOneGuestTask() {
        ActivityScenario.launch(MainActivity::class.java).use {
            continueAsGuest()

            onView(withId(R.id.add_task_fab)).perform(click())
            onView(withId(R.id.task_input)).perform(replaceText("Add once"))
            onView(withId(R.id.add_task_button)).perform(callClickTwice())
            onView(isRoot()).perform(waitFor(500))

            val matchingTasks = runBlocking {
                TaskDatabase.getInstance(context).taskDao().getTasks()
                    .filter { task -> task.text == "Add once" }
            }
            assertEquals(1, matchingTasks.size)
            onView(withText("Add once")).check(matches(isDisplayed()))
        }
    }

    @Test
    fun addsGuestTaskFromKeyboardEnter() {
        ActivityScenario.launch(MainActivity::class.java).use {
            continueAsGuest()

            onView(withId(R.id.add_task_fab)).perform(click())
            onView(withId(R.id.task_input)).perform(replaceText("Submit with enter"))
            onView(withId(R.id.task_input)).perform(pressImeActionButton())
            onView(isRoot()).perform(waitFor(500))

            onView(withText("Submit with enter")).check(matches(isDisplayed()))
            onView(withId(R.id.task_character_counter)).check(doesNotExist())
        }
    }

    @Test
    fun newTaskSheetShowsOneHundredCharacterLimit() {
        ActivityScenario.launch(MainActivity::class.java).use {
            continueAsGuest()

            onView(withId(R.id.add_task_fab)).perform(click())
            onView(withId(R.id.task_input)).perform(replaceText("x".repeat(100)))
            onView(withText("100/100")).check(matches(isDisplayed()))
        }
    }

    @Test
    fun scrollsThroughLongGuestTaskList() {
        seedGuestTasks(30)

        ActivityScenario.launch(MainActivity::class.java).use {
            continueAsGuest()
            onView(isRoot()).perform(waitFor(500))

            onView(withId(R.id.task_list)).perform(scrollRecyclerToPosition(30))
            onView(withText("Guest task 1")).check(matches(isDisplayed()))
            onView(withId(R.id.task_list)).check(taskIsCompletelyVisible("Guest task 1"))
        }
    }

    @Test
    fun headerControlsFitWithoutOverlappingTitle() {
        seedGuestTasks(3)

        ActivityScenario.launch(MainActivity::class.java).use {
            continueAsGuest()
            onView(isRoot()).perform(waitFor(500))

            onView(withId(R.id.home_header)).check(headerControlsFit())
        }
    }

    @Test
    fun oneTaskListWrapsExactlyOneCompactRow() {
        seedGuestTasks(1)

        ActivityScenario.launch(MainActivity::class.java).use {
            continueAsGuest()
            onView(isRoot()).perform(waitFor(500))

            onView(withId(R.id.task_list)).check(singleTaskListIsCompact())
        }
    }

    @Test
    fun maximumLengthTaskIsInsetAndDoesNotOverlapActions() {
        val longTitle = "A".repeat(100)
        seedGuestTask("long-task", longTitle)

        ActivityScenario.launch(MainActivity::class.java).use {
            continueAsGuest()
            onView(isRoot()).perform(waitFor(500))

            onView(withId(R.id.task_list)).check(taskContentIsAligned(longTitle))
        }
    }

    @Test
    fun bottomNavigationShowsLabeledDestinations() {
        ActivityScenario.launch(MainActivity::class.java).use {
            continueAsGuest()

            onView(withId(R.id.homeFragment)).check(matches(withText(R.string.home)))
            onView(withId(R.id.profileFragment)).check(matches(withText(R.string.settings)))

            onView(withId(R.id.profileFragment)).perform(click())
            onView(withId(R.id.profileFragment)).check(matches(withText(R.string.settings)))
            onView(withId(R.id.homeFragment)).check(matches(withText(R.string.home)))
        }
    }

    @Test
    fun sortMenuContainsTheDefaultDueDateSort() {
        ActivityScenario.launch(MainActivity::class.java).use {
            continueAsGuest()

            onView(withId(R.id.task_sort_button)).perform(click())

            onView(withId(R.id.sort_menu_root)).check(matches(isDisplayed()))
            onView(withText(R.string.sort_due_date)).check(matches(isDisplayed()))
            onView(withId(R.id.sort_option_due_date)).check(matches(isSelected()))
        }
    }

    @Test
    fun sortMenuPersistsAndMarksTheSelectedOption() {
        ActivityScenario.launch(MainActivity::class.java).use {
            continueAsGuest()

            onView(withId(R.id.task_sort_button)).perform(click())
            onView(withId(R.id.sort_option_priority)).perform(click())
            onView(withId(R.id.sort_menu_root)).check(doesNotExist())

            onView(withId(R.id.task_sort_button)).perform(click())
            onView(withId(R.id.sort_option_priority)).check(matches(isSelected()))
        }
    }

    @Test
    fun manageListsCreatesEditsRecolorsAndDeletesAListInSheet() {
        ActivityScenario.launch(MainActivity::class.java).use {
            continueAsGuest()

            onView(withId(R.id.task_filter_button)).perform(click())
            onView(withContentDescription(R.string.manage_lists)).perform(click())
            onView(withId(R.id.list_manager_list_card)).check(matches(isDisplayed()))
            onView(withId(R.id.list_manager_create)).perform(click())
            onView(withText(R.string.new_list)).check(matches(isDisplayed()))
            onView(withId(R.id.list_manager_name)).perform(replaceText("Errands"))
            onView(withId(R.id.list_manager_name)).perform(pressImeActionButton())
            onView(withText("Errands")).check(matches(isDisplayed()))

            onView(withId(R.id.list_manager_list_card)).perform(clickEditForList("Errands"))
            onView(withText(R.string.edit_list)).check(matches(isDisplayed()))
            onView(withId(R.id.list_manager_name)).perform(replaceText("Weekend"))
            onView(withId(R.id.list_manager_colors)).perform(clickChildAt(2))
            onView(withId(R.id.list_manager_name)).perform(pressImeActionButton())
            onView(withText("Weekend")).check(matches(isDisplayed()))

            onView(withContentDescription("Delete Weekend list")).perform(click())
            onView(withText("Delete \"Weekend\"?")).inRoot(isDialog()).check(matches(isDisplayed()))
            onView(withText(R.string.delete)).inRoot(isDialog()).perform(click())
            onView(isRoot()).perform(waitFor(300))
            onView(withText("Weekend")).check(doesNotExist())
        }
    }

    @Test
    fun headerAndProgressUseLiveTaskCounts() {
        seedGuestTasks(3)

        ActivityScenario.launch(MainActivity::class.java).use {
            continueAsGuest()

            onView(withId(R.id.list_view_button)).check(matches(isDisplayed()))
            onView(withId(R.id.home_date_text)).check(matches(isDisplayed()))
            onView(withText("0 of 3 completed")).check(matches(isDisplayed()))

            onView(withId(R.id.task_list)).perform(clickCheckboxForTask("Guest task 3"))
            onView(isRoot()).perform(waitFor(500))

            onView(withText("1 of 3 completed")).check(matches(isDisplayed()))
        }
    }

    @Test
    fun alphabeticalSortChangesTheActiveTaskOrder() {
        seedGuestTasks(3)

        ActivityScenario.launch(MainActivity::class.java).use {
            continueAsGuest()
            onView(withId(R.id.task_list)).check(firstTaskTextIs("Guest task 3"))

            onView(withId(R.id.task_sort_button)).perform(click())
            onView(withText(R.string.sort_alphabetical)).perform(click())

            onView(withId(R.id.task_list)).check(firstTaskTextIs("Guest task 1"))
        }
    }

    @Test
    fun addingGuestTaskFromScrolledListReturnsToTop() {
        seedGuestTasks(30)

        ActivityScenario.launch(MainActivity::class.java).use {
            continueAsGuest()
            onView(isRoot()).perform(waitFor(500))
            onView(withId(R.id.task_list)).perform(scrollRecyclerToPosition(30))

            onView(withId(R.id.add_task_fab)).perform(click())
            onView(withId(R.id.task_input)).perform(replaceText("Newest task"))
            onView(withId(R.id.add_task_button)).perform(click())
            onView(isRoot()).perform(waitFor(500))

            onView(withText("Newest task")).check(matches(isDisplayed()))
        }
    }

    @Test
    fun settingHighPriorityMovesTaskAboveNewerDefaultPriorityTasks() {
        seedGuestTasks(3)

        ActivityScenario.launch(MainActivity::class.java).use {
            continueAsGuest()
            onView(isRoot()).perform(waitFor(500))
            onView(withId(R.id.task_list)).check(firstTaskTextIs("Guest task 3"))

            onView(withId(R.id.task_list)).perform(clickPriorityForTask("Guest task 1"))
            onView(isRoot()).perform(waitFor(500))

            onView(withId(R.id.task_list)).check(firstTaskTextIs("Guest task 1"))
            onView(withId(R.id.task_list)).check(priorityDotIsEndAligned("Guest task 1"))

            onView(withId(R.id.task_list)).perform(clickPriorityForTask("Guest task 1"))
            onView(isRoot()).perform(waitFor(500))

            onView(withId(R.id.task_list)).check(firstTaskTextIs("Guest task 3"))

            val updatedTask = runBlocking {
                TaskDatabase.getInstance(context).taskDao().getTasks()
                    .single { task -> task.id == "guest-task-1" }
            }
            assertEquals(null, updatedTask.priority)
        }
    }

    @Test
    fun completingTaskHidesItUntilCompletedTasksAreShown() {
        ActivityScenario.launch(MainActivity::class.java).use {
            continueAsGuest()

            onView(withId(R.id.add_task_fab)).perform(click())
            onView(withId(R.id.task_input)).perform(replaceText("Finish checklist"))
            onView(withId(R.id.add_task_button)).perform(click())
            onView(isRoot()).perform(waitFor(500))

            onView(withId(R.id.task_list)).perform(clickCheckboxForTask("Finish checklist"))
            onView(isRoot()).perform(waitFor(500))
            onView(withText("Finish checklist")).check(doesNotExist())

            onView(withId(R.id.task_settings_button)).perform(click())
            onView(withText("Finish checklist")).check(matches(isDisplayed()))
            onView(withId(R.id.task_section_title)).check(matches(isDisplayed()))
        }
    }

    @Test
    fun revealedDeleteActionDeletesOnFirstTap() {
        seedGuestTasks(1)

        ActivityScenario.launch(MainActivity::class.java).use {
            continueAsGuest()
            onView(isRoot()).perform(waitFor(500))

            onView(withText("Guest task 1")).perform(swipeLeft())
            onView(withText("Guest task 1")).check(matches(isDisplayed()))
            onView(allOf(withContentDescription(R.string.delete_task), isDisplayed())).perform(click())
            onView(isRoot()).perform(waitFor(500))

            onView(withText("Guest task 1")).check(doesNotExist())
            assertTrue(runBlocking { TaskDatabase.getInstance(context).taskDao().getTasks() }.isEmpty())
        }
    }

    @Test
    fun undoRestoresDeletedTask() {
        seedGuestTasks(1)

        ActivityScenario.launch(MainActivity::class.java).use {
            continueAsGuest()
            onView(isRoot()).perform(waitFor(500))

            onView(withText("Guest task 1")).perform(swipeLeft())
            onView(allOf(withContentDescription(R.string.delete_task), isDisplayed())).perform(click())
            onView(withText(R.string.undo)).perform(click())
            onView(isRoot()).perform(waitFor(500))

            onView(withText("Guest task 1")).check(matches(isDisplayed()))
            assertEquals(1, runBlocking { TaskDatabase.getInstance(context).taskDao().getTasks() }.size)
        }
    }

    @Test
    fun outsideTapClosesRevealWithoutDeletingTask() {
        seedGuestTasks(1)

        ActivityScenario.launch(MainActivity::class.java).use {
            continueAsGuest()
            onView(isRoot()).perform(waitFor(500))

            onView(withText("Guest task 1")).perform(swipeLeft())
            onView(withId(R.id.task_list)).check(taskRevealState("Guest task 1", true))

            onView(withId(R.id.home_header)).perform(click())
            onView(isRoot()).perform(waitFor(250))

            onView(withId(R.id.task_list)).check(taskRevealState("Guest task 1", false))
            onView(withText("Guest task 1")).check(matches(isDisplayed()))
        }
    }

    @Test
    fun rightSwipeClosesRevealWithoutMovingRowOrDeletingTask() {
        seedGuestTasks(1)

        ActivityScenario.launch(MainActivity::class.java).use {
            continueAsGuest()
            onView(isRoot()).perform(waitFor(500))

            onView(withText("Guest task 1")).perform(swipeLeft())
            onView(withId(R.id.task_list)).check(taskRevealState("Guest task 1", true))

            onView(withId(R.id.task_list)).perform(swipeTaskRight("Guest task 1"))
            onView(isRoot()).perform(waitFor(250))

            onView(withId(R.id.task_list)).check(taskRevealState("Guest task 1", false))
            onView(withText("Guest task 1")).check(matches(isDisplayed()))
        }
    }

    @Test
    fun openingSecondTaskClosesFirstReveal() {
        seedGuestTasks(2)

        ActivityScenario.launch(MainActivity::class.java).use {
            continueAsGuest()
            onView(isRoot()).perform(waitFor(500))

            onView(withText("Guest task 2")).perform(swipeLeft())
            onView(withText("Guest task 1")).perform(swipeLeft())
            onView(isRoot()).perform(waitFor(250))

            onView(withId(R.id.task_list)).check(taskRevealState("Guest task 2", false))
            onView(withId(R.id.task_list)).check(taskRevealState("Guest task 1", true))
        }
    }

    @Test
    fun tappingAnotherTaskClosesRevealWithoutCompletingIt() {
        seedGuestTasks(2)

        ActivityScenario.launch(MainActivity::class.java).use {
            continueAsGuest()
            onView(isRoot()).perform(waitFor(500))

            onView(withText("Guest task 2")).perform(swipeLeft())
            onView(withText("Guest task 1")).perform(click())
            onView(isRoot()).perform(waitFor(500))

            onView(withId(R.id.task_list)).check(taskRevealState("Guest task 2", false))
            onView(withText("Guest task 1")).check(matches(isDisplayed()))
        }
    }

    @Test
    fun scrollingClosesRevealWithoutDeletingTask() {
        seedGuestTasks(30)

        ActivityScenario.launch(MainActivity::class.java).use {
            continueAsGuest()
            onView(isRoot()).perform(waitFor(500))

            onView(withText("Guest task 30")).perform(swipeLeft())
            onView(withId(R.id.task_list)).perform(swipeUp())
            onView(withId(R.id.task_list)).perform(scrollRecyclerToPosition(0))
            onView(isRoot()).perform(waitFor(250))

            onView(withId(R.id.task_list)).check(taskRevealState("Guest task 30", false))
            assertEquals(30, runBlocking { TaskDatabase.getInstance(context).taskDao().getTasks() }.size)
        }
    }

    @Test
    fun deleteAllTasksRequiresConfirmation() {
        seedGuestTasks(3)

        ActivityScenario.launch(MainActivity::class.java).use {
            continueAsGuest()
            onView(isRoot()).perform(waitFor(500))

            onView(withId(R.id.profileFragment)).perform(click())
            onView(withId(R.id.profile_data_sync_row)).perform(scrollTo(), click())
            onView(withId(R.id.data_sync_delete_all_row)).perform(click())
            onView(withText(R.string.delete_all_tasks_title))
                .inRoot(isDialog())
                .check(matches(isDisplayed()))

            onView(withText(R.string.cancel))
                .inRoot(isDialog())
                .perform(click())
            assertEquals(3, runBlocking { TaskDatabase.getInstance(context).taskDao().getTasks() }.size)

            onView(withId(R.id.data_sync_delete_all_row)).perform(click())
            onView(withText(R.string.delete))
                .inRoot(isDialog())
                .perform(click())
            onView(isRoot()).perform(waitFor(500))

            onView(withId(R.id.homeFragment)).perform(click())
            onView(withText(R.string.tasks_empty)).check(matches(isDisplayed()))
            val remainingTasks = runBlocking {
                TaskDatabase.getInstance(context).taskDao().getTasks()
            }
            assertEquals(0, remainingTasks.size)
        }
    }

    @Test
    fun completedTasksSettingDeletesOnlyCompletedTasks() {
        seedGuestTasksWithCompletedTask()

        ActivityScenario.launch(MainActivity::class.java).use {
            continueAsGuest()
            onView(withId(R.id.profileFragment)).perform(click())

            onView(withId(R.id.profile_completed_tasks_row)).perform(scrollTo(), click())
            onView(withText(R.string.delete_completed_tasks))
                .inRoot(isDialog())
                .check(matches(isDisplayed()))
            onView(withText(R.string.delete))
                .inRoot(isDialog())
                .perform(click())
            onView(isRoot()).perform(waitFor(500))

            val remainingTasks = runBlocking {
                TaskDatabase.getInstance(context).taskDao().getTasks()
            }
            assertEquals(listOf("Active task"), remainingTasks.map(TaskEntity::text))
        }
    }

    @Test
    fun statsDestinationHostsProductivitySections() {
        ActivityScenario.launch(MainActivity::class.java).use {
            continueAsGuest()
            onView(withId(R.id.statsFragment)).perform(click())

            onView(withId(R.id.stats_content)).check { view, _ ->
                assertTrue((view as ViewGroup).childCount >= 7)
            }
        }
    }

    @Test
    fun statsCardsUseTheCardSurfaceWithoutGrayTiles() {
        ActivityScenario.launch(MainActivity::class.java).use {
            continueAsGuest()
            onView(withId(R.id.statsFragment)).perform(click())

            onView(withId(R.id.stats_content)).check { view, _ ->
                val content = view as ViewGroup
                (0 until content.childCount)
                    .map(content::getChildAt)
                    .filterIsInstance<MaterialCardView>()
                    .forEach { card ->
                        assertEquals(0f, card.cardElevation, 0.5f)
                    }
                }
        }
    }

    @Test
    fun extendedProfileSectionsMatchTheSettingsCardTreatment() {
        ActivityScenario.launch(MainActivity::class.java).use {
            continueAsGuest()
            onView(withId(R.id.profileFragment)).perform(click())

            onView(isRoot()).check { root, _ ->
                val reference = root.findViewById<MaterialCardView>(R.id.profile_settings_card)
                listOf(
                    R.id.profile_app_information_card
                ).forEach { id ->
                    val card = root.findViewById<MaterialCardView>(id)
                    assertEquals(reference.radius, card.radius, 0.5f)
                    assertEquals(reference.cardBackgroundColor.defaultColor, card.cardBackgroundColor.defaultColor)
                    assertEquals(reference.cardElevation, card.cardElevation, 0.5f)
                    assertEquals(reference.strokeWidth, card.strokeWidth)
                }
            }
        }
    }

    @Test
    fun appVersionIsCenteredBelowAppInformationCard() {
        ActivityScenario.launch(MainActivity::class.java).use {
            continueAsGuest()
            onView(withId(R.id.profileFragment)).perform(click())

            onView(isRoot()).check { root, _ ->
                val appInformation = root.findViewById<View>(R.id.profile_app_information_card)
                val version = root.findViewById<TextView>(R.id.profile_version_label)
                val versionName = context.packageManager
                    .getPackageInfo(context.packageName, 0)
                    .versionName
                    .orEmpty()
                val appInformationLocation = IntArray(2)
                val versionLocation = IntArray(2)
                appInformation.getLocationOnScreen(appInformationLocation)
                version.getLocationOnScreen(versionLocation)

                assertEquals(context.getString(R.string.version_label, versionName), version.text.toString())
                assertTrue(
                    appInformationLocation[1] + appInformation.height <= versionLocation[1]
                )
                assertTrue(version.parent === root.findViewById<View>(R.id.profile_content))
                assertTrue(version.gravity and android.view.Gravity.CENTER_HORIZONTAL != 0)
            }
        }
    }

    @Test
    fun listsAndCollaborationSettingOpensManageLists() {
        ActivityScenario.launch(MainActivity::class.java).use {
            continueAsGuest()
            onView(withId(R.id.profileFragment)).perform(click())

